libs/@local/hashql/hir/tests/ui/lower/checking/type-assertion-smaller.jsonc
//@ run: fail
//@ description: Ensures type checking fails when asserting a supertype (Number) is a subtype (Integer).
[
  "as",
  { "#literal": 42.12 },
  //~^ ERROR This is of type `Number`
  "Integer"
] // checking DOWN fails
